# IChess

IChessAPP/: CMakeLists.txt  MsgNode.h  NetWorkBlack.qml  NetWorkWhite.qml  main.cpp  mynetwork.cpp  mynetwork.h
IChessServer/: AsioIOContextPool.cpp  AsioIOContextPool.h  CMakeLists.txt  CServer.cpp  CSession.cpp  CSession.h  ChessBoard.cpp  ChessBoard.h  ChessManager.cpp  ChessManager.h  LogicSystem.cpp  LogicSystem.h  const.h  main.cpp
